test_errors.txt
warning: nancy v0.1.0 (/home/craig/nancy) ignoring invalid dependency `web` which is missing a lib target
warning: unused imports: `Context` and `bail`
 --> src/commands/grind.rs:1:14
  |
1 | use anyhow::{Context, Result, bail};
  |              ^^^^^^^          ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `git2::Repository`
 --> src/commands/grind.rs:2:5
  |
2 | use git2::Repository;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `tokio::fs`
 --> src/commands/grind.rs:3:5
  |
3 | use tokio::fs;
  |     ^^^^^^^^^

warning: unused imports: `AtomicBool` and `Ordering`
 --> src/commands/grind.rs:5:25
  |
5 | ...atomic::{AtomicBool, Ordering};
  |             ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `std::cell::RefCell`
 --> src/events/writer.rs:4:5
  |
4 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `bail`
 --> src/llm/builder.rs:2:23
  |
2 | use anyhow::{Context, bail};
  |                       ^^^^

warning: unused import: `GeminiError`
 --> src/llm/client.rs:3:47
  |
3 | ...iniResponse, GeminiError, Tool, System...
  |                 ^^^^^^^^^^^

warning: unused import: `Context`
 --> src/dreamer/task_view.rs:1:14
  |
1 | use anyhow::{Context, Result};
  |              ^^^^^^^

warning: unused import: `VecDeque`
 --> src/dreamer/task_view.rs:2:33
  |
2 | use std::collections::{HashSet, VecDeque};
  |                                 ^^^^^^^^

warning: unused imports: `data_log` and `log`
 --> src/dreamer/task_view.rs:5:58
  |
5 | ...oot, frame, data_log, log};
  |                ^^^^^^^^  ^^^

warning: value assigned to `human_last_seen` is never read
   --> src/grind/execute_task.rs:244:39
    |
244 | ...   let mut human_last_seen = 0u64;
    |                                 ^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: variable `logged_any` is assigned to, but never used
  --> src/dreamer/task_view.rs:72:25
   |
72 | ...   let mut logged_any = false;
   |           ^^^^^^^^^^^^^^
   |
   = note: consider using `_logged_any` instead
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `logged_any` is never read
   --> src/dreamer/task_view.rs:101:49
    |
101 | ...                   logged_any = true;
    |                       ^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

   Compiling nancy v0.1.0 (/home/craig/nancy)
warning: `nancy` (lib) generated 13 warnings (run `cargo fix --lib -p nancy` to apply 10 suggestions)
warning: unused variable: `crash_res`
  --> tests/e2e_crash_recovery.rs:61:9
   |
61 |     let crash_res = uds_client.post("htt...
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_crash_res`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `nancy` (test "e2e_crash_recovery") generated 1 warning (run `cargo fix --test "e2e_crash_recovery" -p nancy` to apply 1 suggestion)
error[E0432]: unresolved import `crate::llm::api::error`
   --> src/llm/client.rs:475:26
    |
475 |     use crate::llm::api::error::{
    |                          ^^^^^ could not find `error` in `api`

error[E0574]: expected struct, variant or union type, found enum `GeminiError`
   --> src/llm/client.rs:597:52
    |
597 | ...tusNotOk(GeminiError {
    |             ^^^^^^^^^^^ not a struct, variant or union type
    |
help: consider importing this struct instead
    |
474 +     use gemini_client_api::gemini::error::GeminiError;
    |

error[E0574]: expected struct, variant or union type, found enum `GeminiError`
   --> src/llm/client.rs:734:50
    |
734 | ...tusNotOk(GeminiError {
    |             ^^^^^^^^^^^ not a struct, variant or union type
    |
help: consider importing this struct instead
    |
474 +     use gemini_client_api::gemini::error::GeminiError;
    |

warning: unused import: `AtomicBool`
 --> src/commands/grind.rs:5:25
  |
5 | use std::sync::atomic::{AtomicBool, Order...
  |                         ^^^^^^^^^^

warning: unused import: `Arc`
  --> src/llm/client.rs:36:17
   |
36 | use std::sync::{Arc, Mutex};
   |                 ^^^

warning: unused import: `tempfile::tempdir`
  --> src/schema/identity_config.rs:99:9
   |
99 |     use tempfile::tempdir;
   |         ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src/llm/client.rs:494:45
    |
494 | ... = Gemini::new("xxx", "test_model", N...
    |       -----------        ^^^^^^^^^^^^ expected `String`, found `&str`
    |       |
    |       arguments to this function are incorrect
    |
note: associated function defined here
   --> src/llm/api.rs:214:12
    |
214 | ...fn new(api_key: &str, model: String, s...
    |       ^^^                -------------
help: try using a conversion method
    |
494 |         let mut gemini = Gemini::new("xxx", "test_model".to_string(), None);
    |                                                         ++++++++++++

error[E0308]: mismatched types
   --> src/llm/client.rs:666:50
    |
666 | ...ient.handle_tool_calls(chat).await;
    |         ----------------- ^^^^ expected `&GeminiResponse`, found `GeminiResponse`
    |         |
    |         arguments to this method are incorrect
    |
note: method defined here
   --> src/llm/client.rs:140:25
    |
140 | ...fn handle_tool_calls(&self, resp: &GeminiResponse) -...
    |       ^^^^^^^^^^^^^^^^^        ---------------------
help: consider borrowing here
    |
666 |         let responses = client.handle_tool_calls(&chat).await;
    |                                                  +

error[E0308]: mismatched types
   --> src/llm/client.rs:767:45
    |
767 | ... = Gemini::new("xxx", "test_model", N...
    |       -----------        ^^^^^^^^^^^^ expected `String`, found `&str`
    |       |
    |       arguments to this function are incorrect
    |
note: associated function defined here
   --> src/llm/api.rs:214:12
    |
214 | ...fn new(api_key: &str, model: String, s...
    |       ^^^                -------------
help: try using a conversion method
    |
767 |         let mut gemini = Gemini::new("xxx", "test_model".to_string(), None);
    |                                                         ++++++++++++

error[E0308]: mismatched types
   --> src/llm/client.rs:808:45
    |
808 | ...ni = Gemini::new("xxx", "test", None);
    |         -----------        ^^^^^^ expected `String`, found `&str`
    |         |
    |         arguments to this function are incorrect
    |
note: associated function defined here
   --> src/llm/api.rs:214:12
    |
214 | ...fn new(api_key: &str, model: String, s...
    |       ^^^                -------------
help: try using a conversion method
    |
808 |         let mut gemini = Gemini::new("xxx", "test".to_string(), None);
    |                                                   ++++++++++++

warning: unused variable: `repo`
   --> src/tools/investigate.rs:289:13
    |
289 |         let repo = git2::Repository::in...
    |             ^^^^ help: if this is intentional, prefix it with an underscore: `_repo`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable `logged_any` is assigned to, but never used
  --> src/dreamer/task_view.rs:72:25
   |
72 | ...   let mut logged_any = false;
   |           ^^^^^^^^^^^^^^
   |
   = note: consider using `_logged_any` instead

Some errors have detailed explanations: E0308, E0432, E0574.
For more information about an error, try `rustc --explain E0308`.
warning: `nancy` (lib test) generated 14 warnings (9 duplicates)
error: could not compile `nancy` (lib test) due to 7 previous errors; 14 warnings emitted
